Change UI and update features

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,8 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Server=DESKTOP-PHG26MQ\\SQLEXPRESS;Database=ParwatPiyushDB;Encrypt=False;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=ParwatPiyushDB;Encrypt=False;Trusted_Connection=True;MultipleActiveResultSets=true"
+        //"DefaultConnection": "Server=DESKTOP-PHG26MQ\\SQLEXPRESS;Database=ParwatPiyushDB;Encrypt=False;Trusted_Connection=True;MultipleActiveResultSets=true"
         //"DefaultConnection": "Server=208.91.198.59;Database=parvatpiyush;Encrypt=False;Trusted_Connection=True;MultipleActiveResultSets=true"
         //"DefaultConnection": "Server=208.91.198.59;Database=parvatpiyush;user id=admin;password=parvat@123;TrustServerCertificate=Yes;"
     }
